--- a/src/app/styles/components/plyr-player.scss
+++ b/src/app/styles/components/plyr-player.scss
@@ -1,15 +1,14 @@
 .plyr-player-wrapper {
   position: relative;
   width: 100%;
-  padding-top: 56.25%; /* соотношение сторон 16:9 */
-  background-color: black;
+  aspect-ratio: 16 / 9;
+  background-color: #000;
+  margin: 0;
+  padding: 0;
 }
 
 .plyr-player-wrapper video,
 .plyr-player-wrapper .plyr {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
 }
